--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -25,29 +25,37 @@
                 <tr>
                     <th>Photo</th>
                     <th>Name</th>
+                    <th>Father</th>
+                    <th>Roll No</th>
+                    <th>Reg No</th>
                     <th>Email</th>
+                    <th>Mobile</th>
                     <th>Course</th>
                     <th>Semester</th>
                     <th>Actions</th>
                 </tr>
             </thead>
+
             <tbody>
                 {% for student in students %}
                 <tr>
                     <td>
                         {% if student.photo %}
                         <img src="{{ url_for('static', filename='uploads/' ~ student.photo) }}"
-                             class="table-photo">
+                             class="passport-photo">
                         {% else %}
                         N/A
                         {% endif %}
                     </td>
                     <td>{{ student.name }}</td>
+                    <td>{{ student.father_name }}</td>
+                    <td>{{ student.roll_number }}</td>
+                    <td>{{ student.registration_number }}</td>
                     <td>{{ student.email }}</td>
+                    <td>{{ student.mobile }}</td>
                     <td>{{ student.course }}</td>
                     <td>{{ student.semester }}</td>
                     <td>
-
                         <a href="{{ url_for('edit_student', student_id=student.id) }}"
                            class="btn small-btn">Edit</a>
 
@@ -56,11 +64,10 @@
                               style="display:inline;">
                             <button type="submit"
                                     class="btn small-btn danger-btn"
-                                    onclick="return confirm('Are you sure you want to delete this student?')">
+                                    onclick="return confirm('Delete this student?')">
                                 Delete
                             </button>
                         </form>
-
                     </td>
                 </tr>
                 {% endfor %}
