--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -17,6 +17,8 @@
     <input name="mobile" placeholder="Mobile"><br><br>
     <input name="course" placeholder="Course"><br><br>
     <input name="semester" placeholder="Semester"><br><br>
+    <input name="session" placeholder="Session"><br><br>
+
 
     <input type="file" name="photo"><br><br>
 
@@ -28,3 +30,4 @@
 
 </body>
 </html>
+
