--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -32,6 +32,8 @@
                     <th>Mobile</th>
                     <th>Course</th>
                     <th>Semester</th>
+                    <th>Session</th>
+
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -68,6 +70,8 @@
                     <td>{{ student.mobile }}</td>
                     <td>{{ student.course }}</td>
                     <td>{{ student.semester }}</td>
+                    <td>{{ student.session }}</td>
+
 
                     <td>
                         <a href="{{ url_for('edit_student', student_id=student.id) }}"
@@ -94,3 +98,4 @@
 
 </body>
 </html>
+
