--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -37,6 +37,8 @@
         <p><strong>Mobile:</strong> {{ student.mobile }}</p>
         <p><strong>Course:</strong> {{ student.course }}</p>
         <p><strong>Semester:</strong> {{ student.semester }}</p>
+        <p><strong>Session:</strong> {{ student.session }}</p>
+
     </div>
 
     <!-- ACTIONS (LEFT ALIGNED) -->
@@ -48,3 +50,4 @@
 
 </body>
 </html>
+
