--- a/templates/edit_student.html
+++ b/templates/edit_student.html
@@ -9,6 +9,9 @@
     <input name="mobile" value="{{ student.mobile }}">
     <input name="course" value="{{ student.course }}">
     <input name="semester" value="{{ student.semester }}">
+    <input name="session" value="{{ student.session }}">
+
     <input type="file" name="photo">
     <button type="submit">Save</button>
 </form>
+
