--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -16,6 +16,7 @@
     <input name="email" type="email" placeholder="Email" required><br><br>
     <input name="mobile" placeholder="Mobile"><br><br>
     <input name="course" placeholder="Course"><br><br>
+    <input name="branch" placeholder="branch"><br><br>
     <input name="semester" placeholder="Semester"><br><br>
     <input name="session" placeholder="Session" required><br><br>
 
@@ -31,5 +32,6 @@
 
 </body>
 </html>
+
 
 
