--- a/templates/edit_student.html
+++ b/templates/edit_student.html
@@ -8,10 +8,12 @@
     <input name="email" value="{{ student.email }}">
     <input name="mobile" value="{{ student.mobile }}">
     <input name="course" value="{{ student.course }}">
+    <input name="branch" value="{{ student.branch }}">
     <input name="semester" value="{{ student.semester }}">
     <input name="session" value="{{ student.session }}">
 
     <input type="file" name="photo">
     <button type="submit">Save</button>
 </form>
+
 
