--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -31,6 +31,7 @@
                     <th>Email</th>
                     <th>Mobile</th>
                     <th>Course</th>
+                    <th>branch</th>
                     <th>Semester</th>
                     <th>Session</th>
 
@@ -69,6 +70,7 @@
                     <td>{{ student.email }}</td>
                     <td>{{ student.mobile }}</td>
                     <td>{{ student.course }}</td>
+                    <td>{{ student.branch }}</td>
                     <td>{{ student.semester }}</td>
                     <td>{{ student.session }}</td>
 
@@ -98,4 +100,5 @@
 
 </body>
 </html>
+
 
