--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -36,6 +36,7 @@
         <p><strong>Email:</strong> {{ student.email }}</p>
         <p><strong>Mobile:</strong> {{ student.mobile }}</p>
         <p><strong>Course:</strong> {{ student.course }}</p>
+        <p><strong>branch:</strong> {{ student.branch }}</p>
         <p><strong>Semester:</strong> {{ student.semester }}</p>
         <p><strong>Session:</strong> {{ student.session }}</p>
 
@@ -50,4 +51,5 @@
 
 </body>
 </html>
+
 
